test/sema/member_expr_type_shadowed.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: i32
}

fn main() -> void {
  // CHECK: [[# @LINE + 1 ]]:7: error: redeclaration of 'S'
  let S = S { x: 0 };

  // CHECK: [[# @LINE + 1 ]]:12: error: expected an instance of 'S'
  let x = S.x;
}
